--- a/src/app/pages/perfil/perfil.component.scss
+++ b/src/app/pages/perfil/perfil.component.scss
@@ -75,3 +75,13 @@ ion-content {
     }
 }
 
+.error {
+    margin-top: 0;
+    margin: 5px;
+    font-size: .7rem;
+    color: red;
+}
+.input-error {
+    border-color: red;
+}
+
