--- a/src/app/pages/consulta-score/consulta-score.component.html
+++ b/src/app/pages/consulta-score/consulta-score.component.html
@@ -25,7 +25,7 @@
     </ion-row>
   </ion-grid>
 
-    <ion-card-subtitle>Time: {{item.Timestamp}} email:  {{item.email}}</ion-card-subtitle>
+    <ion-card-subtitle>Time: {{item.Timestamp}} </ion-card-subtitle>
 
 </ion-card>
 </ion-content>
