--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -89,7 +89,7 @@
       </ion-item>
       <div class="botones">
       <div style="text-align: end; margin:10px">
-        <ion-button [routerLink]="['/']" 
+        <ion-button [routerLink]="['/home']" 
                     (click)="guardarUser()" 
                     class="continuar">Vamos! </ion-button>
       </div>
