--- a/src/global.scss
+++ b/src/global.scss
@@ -29,12 +29,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,600;1,100;1,300&display=swap');
 
 .titulo {
-
     font-family: 'Poppins', sans-serif !important;
     font-size: 20px !important;
-    font-weight: bold !important;
-    
+    font-weight: bold !important;  
 }
+
+.titulo-1 {
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 26px !important;
+    font-weight: bold !important;  
+}
+
+.minititulo {
+    font-family: 'Poppins', sans-serif !important;
+    font-size: 14px !important;
+    color: gray !important;
+}
+
+
 .subtitulo {
     font-family: 'Poppins', sans-serif !important;
     font-size: 17px !important;
