--- a/src/app/pages/calendario/calendario.component.html
+++ b/src/app/pages/calendario/calendario.component.html
@@ -33,7 +33,10 @@
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.startTime" [min]="minDate"></ion-datetime>
       </ion-item>
       <ion-item>
-
+        <ion-item>
+        <ion-label>End</ion-label>
+        <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.endTime" [min]="minDate"></ion-datetime>
+        </ion-item>
       </ion-item>
       <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">Add TEETIME</ion-button>
  
