--- a/src/app/pages/calendario/calendario.component.html
+++ b/src/app/pages/calendario/calendario.component.html
@@ -9,7 +9,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="today()">HOY</ion-button>
+      <ion-button class="normal" (click)="today()">HOY</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -18,27 +18,27 @@
  
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Nuevo TeeTime</ion-card-title>
+      <ion-card-title class="titulo">Nuevo TeeTime</ion-card-title>
     </ion-card-header>
     <ion-card-content>
  
       <ion-item>
-        <ion-input type="text" placeholder="Titulo del evento" [(ngModel)]="event.title" required></ion-input>
+        <ion-input class="normal" type="text" placeholder="Titulo del evento" [(ngModel)]="event.title" required></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Descripcion" [(ngModel)]="event.desc"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Descripcion" [(ngModel)]="event.desc"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Start</ion-label>
+        <ion-label class="normal">Start</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.startTime" [min]="minDate"></ion-datetime>
       </ion-item>
       <ion-item>
-        <ion-item>
-        <ion-label>End</ion-label>
+      <ion-item>
+        <ion-label class="normal">End</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.endTime" [min]="minDate"></ion-datetime>
         </ion-item>
       </ion-item>
-      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">Add TEETIME</ion-button>
+      <ion-button class="normal" fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">Add TEETIME</ion-button>
  
     </ion-card-content>
   </ion-card>
@@ -47,20 +47,20 @@
   <!--PLAYER 1-->
   <ion-card>  
     <ion-card-header>
-      <ion-card-title>Jugador 1</ion-card-title>
+      <ion-card-title class="normal">Jugador 1</ion-card-title>
     </ion-card-header>   
     <ion-card-content>
       <ion-item>
-        <ion-input type="text" placeholder="Nombre del jugador 1" [(ngModel)]="event.NPlayer1"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Nombre del jugador 1" [(ngModel)]="event.NPlayer1"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer1"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer1"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer1"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer1"></ion-input>
       </ion-item>
      <ion-item> 
-      <ion-label>Reserva Caddie</ion-label>
+      <ion-label class="normal">Reserva Caddie</ion-label>
       <ion-checkbox color="primary" checked="false" [(ngModel)]="Cddie1"></ion-checkbox>
      </ion-item> 
     </ion-card-content>
@@ -69,20 +69,20 @@
   <!--PLAYER 2-->
   <ion-card>  
     <ion-card-header>
-      <ion-card-title>Jugador 2</ion-card-title>
+      <ion-card-title class="normal">Jugador 2</ion-card-title>
     </ion-card-header>   
     <ion-card-content>
       <ion-item>
-        <ion-input type="text" placeholder="Nombre del jugador 2" [(ngModel)]="event.NPlayer2"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Nombre del jugador 2" [(ngModel)]="event.NPlayer2"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer2"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer2"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer2"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer2"></ion-input>
       </ion-item>
       <ion-item> 
-        <ion-label>Reserva Caddie</ion-label>
+        <ion-label class="normal">Reserva Caddie</ion-label>
         <ion-checkbox color="primary" checked="false" [(ngModel)]="Cddie2"></ion-checkbox>
        </ion-item> 
     </ion-card-content>
@@ -91,20 +91,20 @@
   <!--PLAYER 3-->
   <ion-card>  
     <ion-card-header>
-      <ion-card-title>Jugador 3</ion-card-title>
+      <ion-card-title class="normal">Jugador 3</ion-card-title>
     </ion-card-header>   
     <ion-card-content>
       <ion-item>
-        <ion-input type="text" placeholder="Nombre del jugador 3" [(ngModel)]="event.NPlayer3"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Nombre del jugador 3" [(ngModel)]="event.NPlayer3"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer3"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Correo electronico" [(ngModel)]="event.CPlayer3"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer3"></ion-input>
+        <ion-input class="normal" type="text" placeholder="Numero del documento" [(ngModel)]="event.DPlayer3"></ion-input>
       </ion-item>
            <ion-item> 
-      <ion-label>Reserva Caddie</ion-label>
+      <ion-label class="normal">Reserva Caddie</ion-label>
       <ion-checkbox color="primary" checked="false" [(ngModel)]="Cddie3"></ion-checkbox>
      </ion-item> 
     </ion-card-content>
